loco-gen/tests/templates/snapshots/generate[frontend_page_New]@Api_scaffold.snap
---
source: loco-gen/tests/templates/scaffold.rs
expression: "fs::read_to_string(pages_path.join(format!(\"{page}.tsx\"))).unwrap_or_else(|_|\npanic!(\"frontend {page}.tsx file missing\"))"
---
import { useState } from "react";
import { useNavigate } from "react-router";
import { useCreatePost } from "../../api/posts";
import type { CreatePost } from "../../bindings/CreatePost";
import type { PostStatus } from "../../bindings/PostStatus";

const STATUS_OPTIONS: PostStatus[] = ["draft", "published", "archived"];

export function New() {
  const navigate = useNavigate();
  const createPost = useCreatePost();

  const [form, setForm] = useState<CreatePost>({
    title: "",
    content: "",
    status: "draft",
    price: "",
    published_at: null,
  });

  function handleSubmit(event: React.FormEvent<HTMLFormElement>) {
    event.preventDefault();
    createPost.mutate(form, {
      onSuccess: (created) => {
        navigate(`/posts/${created.id}`);
      },
    });
  }

  return (
    <div>
      <h1>New Post</h1>
      <form onSubmit={handleSubmit}>
        <div>
          <label htmlFor="title">Title</label>
          <input
            id="title"
            type="text"
            value={form.title}
            onChange={(e) => setForm({ ...form, title: e.target.value })}
            required
          />
        </div>
        <div>
          <label htmlFor="content">Content</label>
          <textarea
            id="content"
            value={form.content}
            onChange={(e) => setForm({ ...form, content: e.target.value })}
            required
          />
        </div>
        <div>
          <label htmlFor="status">Status</label>
          <select
            id="status"
            value={form.status}
            onChange={(e) =>
              setForm({ ...form, status: e.target.value as PostStatus })
            }
          >
            {STATUS_OPTIONS.map((option) => (
              <option key={option} value={option}>
                {option}
              </option>
            ))}
          </select>
        </div>
        <div>
          <label htmlFor="price">Price</label>
          <input
            id="price"
            type="text"
            value={form.price}
            onChange={(e) => setForm({ ...form, price: e.target.value })}
            required
          />
        </div>
        <div>
          <label htmlFor="published_at">Published at</label>
          <input
            id="published_at"
            type="datetime-local"
            value={form.published_at ?? ""}
            onChange={(e) =>
              setForm({
                ...form,
                published_at: e.target.value || null,
              })
            }
          />
        </div>
        <button type="submit" disabled={createPost.isPending}>
          {createPost.isPending ? "Creating…" : "Create"}
        </button>
        {createPost.error && <p role="alert">{createPost.error.message}</p>}
      </form>
    </div>
  );
}
